Align start/stop button style to other buttons

--- a/static/main.css
+++ b/static/main.css
@@ -381,15 +381,6 @@ h4 {
 	border-color: rgba(120,130,140,.3);
 }
 
-.button-success,
-.button-error,
-.button-warning,
-.button-secondary {
-  color: white;
-  border-radius: 4px;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-}
-
 .button-success {
   background: rgb(28, 184, 65); /* this is a green */
 }
